# GP2040-CE

./: .gitmodules  CMakeLists.txt
.github/workflows/: cmake.yml
configs/AdafruitMacroPad/: BoardConfig.h  README.md
headers/: gp2040.h  tusb_config.h  usbhostmanager.h  usblistener.h
headers/addons/: display.h  i2c_gpio_mpr121.h  inputhistory.h  keyboard_host_listener.h  midi_host.h  midi_host_listener.h  motion.h  pcf8575expander.h  seesaw.h
headers/display/: GPGFX_types.h
headers/drivers/ps4/: PS4AuthUSBListener.h
headers/drivers/switchpro/: SwitchProDescriptors.h  SwitchProDriver.h
headers/drivers/usbstorage/: USBStorageDriver.h
headers/drivers/xbone/: XBOneAuthUSBListener.h
headers/drivers/xboxog/xid/: xid_driver.h
headers/drivers/xinput/: XInputAuthUSBListener.h
headers/gamepad/: GamepadAuxState.h
headers/interfaces/i2c/bno086/: bno086.h
headers/interfaces/i2c/lsm6dso/: lsm6dso.h
headers/interfaces/i2c/mpr121/: mpr121.h
headers/interfaces/i2c/mpu6886/: mpu6886.h
headers/interfaces/i2c/seesaw/: seesaw_dev.h
headers/interfaces/i2c/ssd1306/: tiny_ssd1306.h
lib/: CMakeLists.txt
lib/GPGFX/: CMakeLists.txt  GPGFX.cpp  GPGFX.h  GPGFX_UI.cpp  GPGFX_UI.h  GPGFX_UI_types.h  GPGFX_UI_widgets.h  GPGFX_core.h  GPGFX_types.h
lib/GPGFX/drivers/: displaybase.cpp  displaybase.h  obd_ssd1306.cpp  obd_ssd1306.h  tiny_ssd1306.cpp  tiny_ssd1306.h
lib/GPGFX/fonts/: GP_Font_Basic.h  GP_Font_Big.h  GP_Font_Standard.h
lib/GPGFX/ui/elements/: GPButton.cpp  GPButton.h  GPLever.cpp  GPLever.h  GPScreen.cpp  GPScreen.h  GPWidget.h
lib/GPGFX/ui/screens/: ButtonLayoutScreen.cpp  ButtonLayoutScreen.h  ConfigScreen.cpp  ConfigScreen.h  MainMenuScreen.cpp  MainMenuScreen.h  SplashScreen.cpp  SplashScreen.h
lib/MapleLib/: CMakeLists.txt  maplelib.cpp  maplelib.h
lib/OneBitDisplay/: obd.inl
lib/PCF8575/: CMakeLists.txt  PCF8575.cpp  PCF8575.h  README.md
lib/PicoPeripherals/: peripheral_i2c.cpp  peripheral_i2c.h  peripheral_spi.cpp  peripheral_spi.h
proto/: config.proto  enums.proto
src/: config_utils.cpp  drivermanager.cpp  gp2040.cpp  gp2040aux.cpp  storagemanager.cpp  usbhostmanager.cpp  webconfig.cpp
src/addons/: display.cpp  i2c_gpio_mpr121.cpp  inputhistory.cpp  midi_host.cpp  midi_host_listener.cpp  motion.cpp  neopicoleds.cpp  pcf8575expander.cpp  seesaw.cpp  wiiext.cpp
src/configs/: webconfig.cpp
src/display/ui/screens/: ButtonLayoutScreen.cpp
src/drivers/switchpro/: SwitchProDriver.cpp
src/drivers/usbstorage/: USBStorageDriver.cpp
src/interfaces/i2c/bno086/: bno086.cpp
src/interfaces/i2c/lsm6dso/: lsm6dso.cpp
src/interfaces/i2c/mpr121/: mpr121.cpp
src/interfaces/i2c/mpu6886/: mpu6886.cpp
src/interfaces/i2c/seesaw/: seesaw_dev.cpp
src/interfaces/i2c/ssd1306/: tiny_ssd1306.cpp
www/server/: app.js
www/src/: App.jsx
www/src/Addons/: MPR121.tsx
www/src/Components/: Navigation.jsx
www/src/Components/ButtonLayouts/: GPBase.tsx  GPButton.tsx  GPController.tsx  GPLabel.tsx  GPLever.tsx  GPShape.tsx  GPSprite.tsx  Index.tsx
www/src/Locales/en/: DisplayConfig.jsx  Index.jsx  (+2 more)
www/src/Pages/: AddonsConfigPage.jsx  DisplayConfig.jsx  LayoutConfig.jsx  LayoutConfig.scss  SettingsPage.jsx
www/src/Services/: WebApi.js
www/src/Store/: useExpansionPinStore.ts  useLayoutStore.ts
(+1 files in other folders)
